# nixes

./: .gitignore  Dockerfile  LICENSE  NIX-NOTES.md  README.md  default.nix  nbval-install.nix  nbval-other.nix  nbval.nix  nix.md  node-packages.json  node-packages.nix  requirements.nix  requirements.txt  requirements_frozen.txt
amgx/: README.md  amgx.nix  default-fipy.nix  default.nix  demo.py  demo_shwina.py  fipy-develop.nix  pyamgx.nix  shell.nix
ansys/: flake.nix  pyproject.toml
dvc/: README.md  default.nix  dvc.nix  nixpkgs_version.nix  reflink.nix  requirements.nix  requirements.txt  requirements_frozen.txt
fipy/: fipy.nix
fipy-py2/: fipy.nix  pysparse.nix  shell.nix  skfmm.nix
fipy-py3/: README.md  fipy.nix  gmsh.nix  nbval.nix  shell.nix  skfmm.nix
hasktorch/: aten.nix  cabal.project.local  default.nix  shell.nix
ihaskell/: README.md  default.nix
jupyter/: default.nix
pfhub/: Dockerfile  Gemfile  README.md  default.nix  docker.nix  nbval-install.nix  node.nix  requirements_frozen.txt
pfhub/docker/: Dockerfile  README.md  build.nix  default.nix
python-env/: index.ipynb  shell.nix
scipy-bug/: README.md  bug.py  build.nix  default-old.nix  default.nix  requirements.nix  scipy.nix
torch/: README.md  index.ipynb  shell.nix
