[tool.poetry]
name = "am-dt-modeling"
version = "0.1.0"
description = ""
authors = ["Daniel Wheeler <daniel.wheeler2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
snakemake = "^8.20.5"
toolz = "^0.12.1"
notebook = "^7.2.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
click = "^8.1.7"
scikit-learn = "^1.5.2"
ipywidgets = "^8.1.5"
pyvista = {extras = ["all", "trame"], version = "^0.44.2"}
trame = "^3.7.6"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
